# cranfield-computationMethods-labs

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
lab1/: lab1.cpp
lab2/: main.cpp
mock-assessment/: CMakeLists.txt  accuracy.cpp  accuracy.h  aliases.h  main.cpp  runMock.sh  scheme.cpp  scheme.h  schemetype.h  solution.cpp  solution.h  solutiontype.h  utilities.cpp  utilities.h
